Closed
Bug 1862740
Opened 2 years ago
Closed 2 years ago
network/sctp: Follow-up style guide fixes
Categories
(Core :: WebRTC: Networking, defect)
Core
WebRTC: Networking
Tracking
()
RESOLVED
FIXED
121 Branch
| Tracking | Status | |
|---|---|---|
| firefox121 | --- | fixed |
People
(Reporter: boivie, Assigned: boivie)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36
Steps to reproduce:
This is a follow up from bug 1859759 to fix some remaining style guide fixes, mainly
- Following the style guide wrt declaration order.
- Use const whenever it makes sense.
- Move members to be private where possible (e.g. mLock was previously public, which it didn't have to be).
- Fix most compiler warnings.
| Assignee | ||
Comment 1•2 years ago
|
||
Including, but not limited to:
- Following the style guide wrt declaration order.
- Use const whenever it makes sense.
- Move members to be private where possible (e.g. mLock was previously public,
which it didn't have to be). - Replaced DataChannel::mFlags with individual bools - easier to read.
- Fix most compiler warnings.
These kind of changes are rarely complete - there is always something that was
missed. It's still a step in the right direction.
Updated•2 years ago
|
Assignee: nobody → boivie
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment 2•2 years ago
|
||
Comment 3•2 years ago
|
||
Try looks fine.
Pushed by bcampen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f299fbf0c989
Misc c++ style fixes r=bwc
Comment 5•2 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
status-firefox121:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•