Bug 1862740: Misc c++ style fixes r=bwc

Including, but not limited to:

 * Following the style guide wrt declaration order.
 * Use const whenever it makes sense.
 * Move members to be private where possible (e.g. mLock was previously public,
   which it didn't have to be).
 * Replaced DataChannel::mFlags with individual bools - easier to read.
 * Fix most compiler warnings.

These kind of changes are rarely complete - there is always something that was
missed. It's still a step in the right direction.

Differential Revision: https://phabricator.services.mozilla.com/D192563